[project]
name = "llm-tool-commit"
authors=[{name="Nicolas Chagnet"}]
version = "0.1.0"
description = "Small CLI tool used to generate commit messages using local LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "ollama>=0.4.7",
    "pydanclick>=0.5.0",
    "pydantic>=2.10.6",
]
license = {text="MIT"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
